force-app/main/default/objects/Substitute_Product__c/Substitute_Product__c.object-meta.xml
<CustomObject>
    <description>Junction between Product and Competitor Product</description>
    <label>Related Product</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Substitute Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substitute Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>