force-app/main/default/objects/Substitute_Product__c/fields/Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Product</label>
    <referenceTo>Competitor_Product__c</referenceTo>
    <relationshipLabel>Related Cargill Products</relationshipLabel>
    <relationshipName>Related_Cargill_Products</relationshipName>
    <type>Lookup</type>
</CustomField>